# mnist_tvm

./: .gitignore  CMakeLists.txt  README.md  main.cc
lib/: mnist.params
module/x64/: mnist.params
python/: .model_build.py.swp  model_build.py  rpc_deploy.py
python_script/: deploy_model_on_rasp.ipynb  graph_lib.ipynb  mnist_module_build.ipynb  mnist_module_verification.ipynb  prepare_mnist_lib.ipynb
